# decoding-n400

./: .gitignore  README.md  config.py  generate_figures.sh  pyproject.toml  requirements.txt
01_preprocessing/: 01_1_annotate_check_bad.py  01_2_tsss.py  01_3_tsss_check.py  02_filter.py  03_1_ica_fit.py  03_2_ica_apply.py  03_3_ica_check.py  04_1_epochs_clean_run.py  04_2_epochs_clean_concat.py  04_3_epochs_check.py  05_1_evokeds.py  05_2_evokeds_vis.py  06_1_matrix_short.py  07_0_same_head.py  07_1_grand_ave_same_head.py  07_2_grand_ave_vis.py  08_matrix_grandave.py  09_split_grand_mat.py
02_source_localize/: 00_source_space_setup.py  01_coregistration.py  02_bem_sol.py  03_fwd_inv.py  04_0_stc.py  04_1_stc_morph.py  05_1_stc_morph_average.py  05_2_source_comp.py  05_3_source_comp_plot.py  06_1_source_mat.py  999_extract_adj.py  99_extract_patch_indices.py
03_evokeds_analysis/: evokeds_plot.R  extract_evokeds_R.py  sensor_layout.py
04_decoding/: zero_shot_analyze_results.py  zero_shot_run.py
04_decoding/sensor-level-windows/: perm_run_decoding_grandave_windows.sh  perm_run_decoding_grandave_windows_loop.sh  run_decoding_grandave_windows_cluster.sh  run_decoding_grandave_windows_local.sh  run_decoding_grandave_windows_loop_cluster.sh  run_decoding_grandave_windows_loop_local.sh  windows_overall.R  windows_overall_perm.R
04_decoding/source-level/: 00_get_patch_vertices.sh  01_run_source_combined.sh  01_run_source_combined_loop.sh  02_perm_combined.sh  02_perm_loop.sh  (+6 more)
05_stimuli/: stimuli_stats.R
zeroshotdecoding/: README.md  __init__.py  zero_shot_decoding.py
(+7 files in other folders)
