[project]
name = "ghazaryan2026"
version = "0.1.0"
description = "Analysis scripts for Ghazaryan et al. 2026"
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "matplotlib==3.8.4",
    "mne[full-pyqt6]==1.8.0",
    "nibabel==5.3.2",
    "numpy==1.26.1",
    "pandas==2.1.2",
    "pyvistaqt==0.11.3",
    "qtpy==2.4.3",
    "scikit-learn==1.5.0",
    "scipy==1.11.3",
]
